--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
                                         </li>
                                         <li><a href="/tractors" class="text-decoration-none">Tractores<i class="fa-solid fa-tractor"></i></a></li>
                                         <li><a href="/maquinariapesadas" class="text-decoration-none">Maquinaria Pesada<i class="fa-solid fa-industry"></i></a></li>
-                                        <li><a href="/transpaletas" class="text-decoration-none">Transpaleta/Apilador<i class="fa-solid fa-truck-pickup"></i></a></li>
+                                        <li><a href="/transpaletas" class="text-decoration-none">Transpaleta<i class="fa-solid fa-truck-pickup"></i></a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a>Ventas</a>
@@ -72,7 +72,7 @@
                                   </li>
                                   <li><a href="/tractors" class="text-decoration-none">Tractores<i class="fa-solid fa-tractor"></i></a></li>
                                   <li><a href="/maquinariapesadas" class="text-decoration-none">Maquinaria Pesada<i class="fa-solid fa-industry"></i></a></li>
-                                  <li><a href="/transpaletas" class="text-decoration-none">Transpaleta/Apilador<i class="fa-solid fa-truck-pickup"></i></a></li>
+                                  <li><a href="/transpaletas" class="text-decoration-none">Transpaleta<i class="fa-solid fa-truck-pickup"></i></a></li>
                               </ul>
                           </li>
                           <li class="dropdown"><a>Ventas</a>
