better style to contact

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -90,66 +90,71 @@
 <!-- PROCESO (FEATURES) -->
 <section id="procesos" class="process-style-two" style="background-image: url(/assets/landing_images/background/process-bg-1.jpg);">
     <div class="auto-container">
-        <div class="sec-title text-center style-two">
-            <h2>Proceso simple y limpio</h2>
-            <p> Nos caracterizamos por asegurar continuidad de servicio, atención personalizada en conjunto con nuestras propuestas de mejora continua del producto y servicio.</p>
-            <div class="decor" style="background-image: url(/assets/landing_images/icons/decor-1.png);"></div>
+      <div class="sec-title text-center style-two">
+          <h2>Proceso simple y limpio</h2>
+          <p> Nos caracterizamos por asegurar continuidad de servicio, atención personalizada en conjunto con nuestras propuestas de mejora continua del producto y servicio.</p>
+          <div class="decor" style="background-image: url(/assets/landing_images/icons/decor-1.png);"></div>
+      </div>
+      <div class="inner-content">
+          <div class="line" style="background-image: url(/assets/landing_images/icons/line-1.png);"></div>
+          <div class="row clearfix">
+              <div class="col-lg-4 col-md-6 col-sm-12 work-block">
+                  <div class="work-block-two">
+                      <div class="inner-box">
+                          <div class="arrow-box" style="background-image: url(/assets/landing_images/icons/arrow-1.png);"></div>
+                          <div class="icon-box">
+                              <div class="border-line" style="background-image: url(/assets/landing_images/icons/border-1.png);"></div>
+                              <i class="fa-solid fa-heart"></i>
+                          </div>
+                          <div class="count-box wow zoomIn animated" data-wow-delay="00ms" data-wow-duration="1500ms"><span>01</span></div>
+                          <div class="content-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                              <h4><a class="text-decoration-none">Tus necesidades importan</a></h4>
+                              <p>Nos aseguramos día a día de brindar un servicio impecable que este a la altura de nuestros clientes.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 work-block">
+                  <div class="work-block-two">
+                      <div class="inner-box">
+                          <div class="arrow-box" style="background-image: url(/assets/landing_images/icons/arrow-1.png);"></div>
+                          <div class="icon-box">
+                              <div class="border-line" style="background-image: url(/assets/landing_images/icons/border-1.png);"></div>
+                              <i class="fa-solid fa-rocket"></i>
+                          </div>
+                          <div class="count-box wow zoomIn animated" data-wow-delay="200ms" data-wow-duration="1500ms"><span>02</span></div>
+                          <div class="content-box wow slideInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                              <h4><a class="text-decoration-none">Tendrás equipos de calidad</a></h4>
+                              <p>Mantener un equipo de trabajo e infraestructura que asegure un servicio de primer nivel.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 work-block">
+                  <div class="work-block-two">
+                      <div class="inner-box">
+                          <div class="icon-box">
+                              <div class="border-line" style="background-image: url(/assets/landing_images/icons/border-1.png);"></div>
+                              <i class="fa-solid fa-brain"></i>
+                          </div>
+                          <div class="count-box wow zoomIn animated" data-wow-delay="400ms" data-wow-duration="1500ms"><span>03</span></div>
+                          <div class="content-box wow slideInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
+                              <h4><a class="text-decoration-none">Analizamos y Optimizamos</a></h4>
+                              <p>Incorporar nuevas tecnologías y mecanismos de trabajo más eficientes y rápidos.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        <div class="more-btn wow slideInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
+          <div data-controller="contact" class="d-flex align-items-center">
+            <button class="theme-btn style-five text-decoration-none" data-action="contact#show"><i class='fa-solid fa-paint-roller'></i>Comenzar ahora</button>
+            <p class="d-none ms-4 mt-2 item-animate-1" data-contact-target="name"><strong><i class="me-1 fa-solid fa-user"></i></strong> Cristobal Mancilla SKL</p>
+            <p class="d-none ms-4 mt-2 text-decoration-none item-animate-2" data-contact-target="phone"><strong><i class="me-1 fa-brands fa-whatsapp"></i></strong><a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información%20de%20SKL!" target="_blank">+56987550756</a></p>
+            <p class="d-none ms-4 mt-2 text-decoration-none item-animate-3" data-contact-target="email"><strong><i class="me-1 fa-solid fa-paper-plane"></i></strong> <a href="mailto:Ventas@sklmaquinarias.cl">Ventas@sklmaquinarias.cl</a></p>
+          </div>
         </div>
-        <div class="inner-content">
-            <div class="line" style="background-image: url(/assets/landing_images/icons/line-1.png);"></div>
-            <div class="row clearfix">
-                <div class="col-lg-4 col-md-6 col-sm-12 work-block">
-                    <div class="work-block-two">
-                        <div class="inner-box">
-                            <div class="arrow-box" style="background-image: url(/assets/landing_images/icons/arrow-1.png);"></div>
-                            <div class="icon-box">
-                                <div class="border-line" style="background-image: url(/assets/landing_images/icons/border-1.png);"></div>
-                                <i class="fa-solid fa-heart"></i>
-                            </div>
-                            <div class="count-box wow zoomIn animated" data-wow-delay="00ms" data-wow-duration="1500ms"><span>01</span></div>
-                            <div class="content-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <h4><a class="text-decoration-none">Tus necesidades importan</a></h4>
-                                <p>Nos aseguramos día a día de brindar un servicio impecable que este a la altura de nuestros clientes.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 work-block">
-                    <div class="work-block-two">
-                        <div class="inner-box">
-                            <div class="arrow-box" style="background-image: url(/assets/landing_images/icons/arrow-1.png);"></div>
-                            <div class="icon-box">
-                                <div class="border-line" style="background-image: url(/assets/landing_images/icons/border-1.png);"></div>
-                                <i class="fa-solid fa-rocket"></i>
-                            </div>
-                            <div class="count-box wow zoomIn animated" data-wow-delay="200ms" data-wow-duration="1500ms"><span>02</span></div>
-                            <div class="content-box wow slideInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
-                                <h4><a class="text-decoration-none">Tendrás equipos de calidad</a></h4>
-                                <p>Mantener un equipo de trabajo e infraestructura que asegure un servicio de primer nivel.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 work-block">
-                    <div class="work-block-two">
-                        <div class="inner-box">
-                            <div class="icon-box">
-                                <div class="border-line" style="background-image: url(/assets/landing_images/icons/border-1.png);"></div>
-                                <i class="fa-solid fa-brain"></i>
-                            </div>
-                            <div class="count-box wow zoomIn animated" data-wow-delay="400ms" data-wow-duration="1500ms"><span>03</span></div>
-                            <div class="content-box wow slideInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
-                                <h4><a class="text-decoration-none">Analizamos y Optimizamos</a></h4>
-                                <p>Incorporar nuevas tecnologías y mecanismos de trabajo más eficientes y rápidos.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="more-btn wow slideInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
-              <%= link_to "<i class='fa-solid fa-paint-roller'></i>Comenzar ahora".html_safe, new_user_registration_path, class: "theme-btn style-five text-decoration-none" %>
-            </div>
-        </div>
+      </div>
     </div>
 </section>
 <!-- PROCESO (FEATURES) END -->
