--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
             <div class="col-lg-5 col-md-12 col-sm-12 content-column">
                 <div class="content-box">
                     <p class="mt-4">Arriendo y venta de equipos con  <strong>el mejor servicio</strong> y la mejor <strong>continuidad operativa</strong> del mercado!</p>
-                    <%= link_to "<i class='fa-solid fa-person-digging'></i>Ver Maquinarias Disponibles".html_safe, gruas_path, class: "theme-btn style-five text-decoration-none" %>
+                    <%= link_to "<i class='fa-solid fa-person-digging'></i>Ver Maquinarias Disponibles".html_safe, gruas_path(all: true), class: "theme-btn style-five text-decoration-none" %>
                 </div>
             </div>
             <div class="col-lg-7 col-md-12 col-sm-12 image-column">
