fix logos gruas

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,8 +21,8 @@
                                         <li class="dropdown"><a href="/gruas?all=true" class="text-decoration-none">Grúas<i class="fa-regular fa-screwdriver-wrench"></i></a>
                                             <ul>
                                               <li><a href="/gruas?combustion=true" class="text-decoration-none">Combustión<i class="fa-solid fa-fire"></i></a></li>
-                                              <li><a href="/gruas?electrica=true" class="text-decoration-none">Electrica<i class="fa-solid fa-fire"></i></a></li>
-                                              <li><a href="/gruas?diesel=true" class="text-decoration-none">Diesel<i class="fa-solid fa-fire"></i></a></li>
+                                              <li><a href="/gruas?electrica=true" class="text-decoration-none">Electrica<i class="fa-solid fa-bolt"></i></a></li>
+                                              <li><a href="/gruas?diesel=true" class="text-decoration-none">Diesel<i class="fa-solid fa-gas-pump"></i></a></li>
                                             </ul>
                                         </li>
                                         <li><a href="/tractors" class="text-decoration-none">Tractores<i class="fa-solid fa-tractor"></i></a></li>
@@ -66,8 +66,8 @@
                                   <li class="dropdown"><a href="/gruas?all=true" class="text-decoration-none">Grúas<i class="fa-regular fa-screwdriver-wrench"></i></a>
                                       <ul>
                                         <li><a href="/gruas?combustion=true" class="text-decoration-none">Combustión<i class="fa-solid fa-fire"></i></a></li>
-                                        <li><a href="/gruas?electrica=true" class="text-decoration-none">Electrica<i class="fa-solid fa-fire"></i></a></li>
-                                        <li><a href="/gruas?diesel=true" class="text-decoration-none">Diesel<i class="fa-solid fa-fire"></i></a></li>
+                                        <li><a href="/gruas?electrica=true" class="text-decoration-none">Electrica<i class="fa-solid fa-bolt"></i></a></li>
+                                        <li><a href="/gruas?diesel=true" class="text-decoration-none">Diesel<i class="fa-solid fa-gas-pump"></i></a></li>
                                       </ul>
                                   </li>
                                   <li><a href="/tractors" class="text-decoration-none">Tractores<i class="fa-solid fa-tractor"></i></a></li>
