--- a/app/views/transpaleta_apilador_electricos/index.html.erb
+++ b/app/views/transpaleta_apilador_electricos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Transpaletas</h1>
+  <h1>Transpaletas/Apiladores</h1>
   <div class="cards">
       <% @transpaletas.each do |transpaleta|  %>
         <div class="card-trip img-fluid item-animate">
