--- a/app/views/ventos/index.html.erb
+++ b/app/views/ventos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Ventos</h1>
+  <h1>Ventas</h1>
   <% if params[:nuevos].present? || params[:all].present? %>
     <h1 style="margin-top: 16px;font-size: 18px">Equipos Nuevos:</h1>
     <%= render partial: "ventos/shared/card", locals: { category: "Nuevos" } %>
