--- a/app/views/ventos/show.html.erb
+++ b/app/views/ventos/show.html.erb
@@ -17,6 +17,7 @@
   </div>
 </div>
   <% if user_signed_in? %>
-  <%= button_to "Delete", vento_path(@vento), method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= button_to "Delete", vento_path(@vento), class: "btn btn-outline-dark", method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to "Edit", edit_vento_path(@vento), class: "btn btn-outline-dark" %>
   <% end %>
 </div>
