--- a/app/views/gruas/show.html.erb
+++ b/app/views/gruas/show.html.erb
@@ -9,15 +9,15 @@
     </div>
     <%= render 'shared/skl_info' %>
     <div>
-
     </div>
   </div>
   <div class="card-product" style="margin-top: 16px;margin-left: 16px;padding: 12px;">
-  <h3 h2 style="font-size:18px"> Descripcion: </h3>
-   <h3 h2 style="font-size:18px"> <%= @grua.descripcion %></h3>
+    <h3 h2 style="font-size:18px"> Descripcion: </h3>
+    <h3 h2 style="font-size:18px"> <%= @grua.descripcion %></h3>
   </div>
 </div>
-  <% if user_signed_in? %>
-   <%= link_to "Delete", grua_path(@grua), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this grua?" } %>
-  <% end %>
-</div>
+
+<% if user_signed_in? %>
+  <%= link_to "Edit", edit_grua_path(@grua), class: "btn btn-outline-dark" %>
+  <%= link_to "Delete", grua_path(@grua), class: "btn btn-outline-dark", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this grua?" } %>
+<% end %>
