--- a/app/views/repuestos/index.html.erb
+++ b/app/views/repuestos/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container-fluid">
-  <h1>Repuestos</h1>
+  <div class="d-flex align-items-center">
+    <h1>Repuestos</h1>
+    <% if current_user %>
+      <%= link_to "Nuevo", new_repuesto_path, class: "btn btn-outline-dark ml-auto" %>
+    <% end %>
+  </div>
   <div class="cards">
     <% @repuestos.each do |repuesto|  %>
       <div class="card-trip img-fluid item-animate">
