--- a/app/views/transpaleta_apilador_electricos/show.html.erb
+++ b/app/views/transpaleta_apilador_electricos/show.html.erb
@@ -16,6 +16,7 @@
   </div>
 </div>
   <% if user_signed_in? %>
-  <%= button_to "Delete", transpaleta_path(@transpaleta), method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= button_to "Delete", transpaleta_path(@transpaleta), class: "btn btn-outline-dark", method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to "Edit", edit_transpaleta_path(@transpaleta), class: "btn btn-outline-dark" %>
   <% end %>
 </div>
