--- a/app/views/gruas/show.html.erb
+++ b/app/views/gruas/show.html.erb
@@ -5,7 +5,7 @@
       <h2 style="font-size: 18px"><%= @grua.marca %></h2>
       <h2 style="font-size: 18px"><%= @grua.modelo %></h2>
       <a href="<%= @grua.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
-      <p style="font-size: 14px;margin-bot: 12px;"><%= @grua.disponible %></p>
+      <p style="font-size: 14px;margin-bot: 12px;"><%= @grua.availability %></p>
     </div>
     <%= render 'shared/skl_info' %>
     <div>
