--- a/app/views/maquinariapesadas/show.html.erb
+++ b/app/views/maquinariapesadas/show.html.erb
@@ -6,7 +6,7 @@
       <h2 style="font-size: 24px"><%= @maquinariapesada.marca %></h2>
       <h2 style="font-size: 24px"><%= @maquinariapesada.modelo %></h2>
       <a href="<%= @maquinariapesada.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
-      <p style="font-size: 14px;margin-bot: 12px;"><%= @maquinariapesada.disponible %></p>
+      <p style="font-size: 14px;margin-bot: 12px;"><%= @maquinariapesada.availability %></p>
     </div>
     <%= render 'shared/skl_info' %>
   </div>
