--- a/app/views/transpaleta_apilador_electricos/show.html.erb
+++ b/app/views/transpaleta_apilador_electricos/show.html.erb
@@ -6,7 +6,7 @@
       <h2 style="font-size: 24px"><%= @transpaleta.marca %></h2>
       <h2 style="font-size: 24px"><%= @transpaleta.modelo %></h2>
       <a href="<%= @transpaleta.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
-      <p style="font-size: 14px;margin-bot: 12px;"><%= @transpaleta.disponible %></p>
+      <p style="font-size: 14px;margin-bot: 12px;"><%= @transpaleta.availability %></p>
     </div>
   <%= render 'shared/skl_info' %>
   </div>
