--- a/app/views/ventos/show.html.erb
+++ b/app/views/ventos/show.html.erb
@@ -7,7 +7,7 @@
       <h2 style="font-size: 24px"><%= @vento.modelo %></h2>
       <h2 style="font-size: 24px"><%= @vento.precio %></h2>
       <a href="<%= @vento.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
-      <p style="font-size: 14px;margin-bot: 12px;"><%= @vento.disponible %></p>
+      <p style="font-size: 14px;margin-bot: 12px;"><%= @vento.availability %></p>
     </div>
     <%= render 'shared/skl_info' %>
   </div>
