--- a/app/views/shared/_skl_info.html.erb
+++ b/app/views/shared/_skl_info.html.erb
@@ -1,6 +1,6 @@
 <div data-controller="contact" class="d-flex align-items-center">
   <button class="btn btn-dark" data-action="contact#show">Contactar</button>
-  <p class="d-none ms-4 item-animate-1" data-contact-target="name"><strong><i class="me-1 fa-solid fa-user"></i></strong> Cristobal Mancilla SKL</p>
+  <p class="d-none ms-4 item-animate-1" data-contact-target="name"><strong><i class="me-1 fa-solid fa-user"></i></strong> Cristobal Mancilla</p>
   <p class="d-none ms-4 text-decoration-none item-animate-2" data-contact-target="phone"><strong><i class="me-1 fa-brands fa-whatsapp"></i></strong><a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información%20de%20SKL!" target="_blank">+56987550756</a></p>
   <p class="d-none ms-4 text-decoration-none item-animate-3" data-contact-target="email"><strong><i class="me-1 fa-solid fa-paper-plane"></i></strong> <a href="mailto:Ventas@sklmaquinarias.cl">Ventas@sklmaquinarias.cl</a></p>
 </div>
