--- a/app/views/equipos/show.html.erb
+++ b/app/views/equipos/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card-product">
     <%= cl_image_tag @equipo.photo.key, height: 300, width: 400, crop: :fill %>
-    <div class="card-product-infos">
+    <div class="card-product-infos-equipos">
       <h2><%= @equipo.modelo %></h2>
       <h2><%= @equipo.marca %></h2>
       <h2><%= @equipo.link %></h2>
