--- a/app/views/ventos/show.html.erb
+++ b/app/views/ventos/show.html.erb
@@ -1,23 +1,23 @@
-<div class="container-fluid">
-<div class="container" style="  display: flex;justify-content: center;">
-  <div class="card-product" style="margin-top: 16px;">
-    <%= cl_image_tag @vento.photo.key, height: 600, width: 800, crop: :fill %>
-    <div class="card-product-infos">
-      <h2 style="font-size: 24px"><%= @vento.marca %></h2>
-      <h2 style="font-size: 24px"><%= @vento.modelo %></h2>
-      <h2 style="font-size: 24px"><%= @vento.precio %></h2>
-      <a href="<%= @vento.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
-      <p style="font-size: 14px;margin-bot: 12px;"><%= @vento.availability %></p>
+<div class="container">
+  <div class="d-flex justify-content-center">
+    <div class="card-product mr-2">
+      <%= cl_image_tag @vento.photo.key, height: 600, width: 800, crop: :fill %>
+      <div class="card-product-infos">
+        <h2 style="font-size: 18px"><%= @vento.marca %></h2>
+        <h2 style="font-size: 18px"><%= @vento.modelo %></h2>
+        <p class="availability" style="font-size: 14px;"><%= @vento.availability %></p>
+      </div>
+      <%= render 'shared/skl_info' %>
     </div>
-    <%= render 'shared/skl_info' %>
+    <div class="card-product description-card">
+      <h3 style="font-size: 18px">Descripción (<a href="<%= @vento.link.to_s %>" style="font-size: 16px">Ficha técnica</a>):</h3>
+      <h3 style="font-size: 18px"><%= @vento.descripcion %></h3>
+    </div>
   </div>
-  <div class="card-product" style="margin-top: 16px;margin-left: 16px;padding: 12px;">
-  <h3 h2 style="font-size:24px"> Descripcion: </h3>
-   <h3 h2 style="font-size:24px"> <%= @vento.descripcion %></h3>
-  </div>
-</div>
   <% if user_signed_in? %>
-    <%= button_to "Delete", vento_path(@vento), class: "btn btn-outline-dark", method: :delete, data: { confirm: "Are you sure?" } %>
+    <div class="container buttons">
     <%= link_to "Edit", edit_vento_path(@vento), class: "btn btn-outline-dark" %>
+    <%= link_to "Delete", vento_path(@vento), class: "btn btn-outline-danger", data: { turbo_method: :delete, turbo_confirm: "Está seguro?" } %>
+    </div>
   <% end %>
 </div>
