--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
                             <ul class="navigation clearfix">
                                 <li class="current dropdown"><a>Equipos</a>
                                     <ul>
-                                        <li class="dropdown"><a href="/gruas?all=true" class="text-decoration-none">Grúas<i class="fa-regular fa-screwdriver-wrench"></i></a>
+                                        <li class="dropdown"><a href="/gruas?all=true" class="text-decoration-none">Grúas<i class="fa-solid fa-circle-info"></i></a>
                                             <ul>
                                               <li><a href="/gruas?combustion=true" class="text-decoration-none">Combustión<i class="fa-solid fa-fire"></i></a></li>
                                               <li><a href="/gruas?electrica=true" class="text-decoration-none">Electrica<i class="fa-solid fa-bolt"></i></a></li>
