--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,10 +4,11 @@
     <div class="large-container">
         <div class="row clearfix">
             <div class="col-lg-5 col-md-12 col-sm-12 content-column">
-                <div class="content-box">
+                <div class="content-box" style="margin-top: 0px;">
+                    <%= image_tag "https://res.cloudinary.com/dd3nxxiaw/image/upload/v1673610580/logo_skl_bagtzk.jpg", class: "" %>
                     <p class="mt-4">Arriendo y venta de equipos con  <strong>el mejor servicio</strong> y la mejor <strong>continuidad operativa</strong> del mercado!</p>
                     <%= link_to  gruas_path(all: true), class: "theme-btn style-five text-decoration-none" do %>
-                     <i class="fa-solid fa-circle-check"></i> Ver Maquinarias Disponibles"
+                     <i class="fa-solid fa-circle-check"></i> Ver Maquinarias Disponibles
                     <% end %>
                 </div>
             </div>
