fix<link>novedads edit

--- a/app/views/novedads/index.html.erb
+++ b/app/views/novedads/index.html.erb
@@ -10,9 +10,8 @@
       <div class="card-trip img-fluid item-animate">
         <%= cl_image_tag(novedad.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
         <div class="card-trip-infos">
-          <a><%= link_to " #{novedad.titulo}"  , novedads_path(novedad) %></a>
+          <a><%= link_to "#{novedad.titulo}", novedad_path(novedad) %></a>
           <p> Descripcion: <%= novedad.descripcion %></p>
-          <p></p>
         </div>
       </div>
     <% end %>
