fix<gruas>filter and add dispoible

--- a/app/views/gruas/index.html.erb
+++ b/app/views/gruas/index.html.erb
@@ -12,7 +12,7 @@
 
   <% if params[:electrica].present? || params[:all].present? %>
     <h1 style="margin-top: 16px;font-size: 18px">Electricas:</h1>
-    <%=  render partial: "gruas/shared/card", locals: { category: "Electricas" } %>
+    <%=  render partial: "gruas/shared/card", locals: { category: "Electrica" } %>
   <% end %>
 
   <% if params[:diesel].present? || params[:all].present? %>
