--- a/app/views/gruas/shared/_card.html.erb
+++ b/app/views/gruas/shared/_card.html.erb
@@ -3,10 +3,9 @@
     <div class="card-trip img-fluid item-animate">
       <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
       <div class="card-trip-infos">
-        <a><%= link_to " #{grua.modelo}"  , grua_path(grua) %></a>
+        <a><%= link_to " #{grua.modelo}", grua_path(grua) %></a>
         <p> Marca: <%= grua.marca %></h2>
-        <p> disponibilidad: <%= grua.disponible %></h6>
-        <p></p>
+        <p class="availability" style="font-size: 14px;"><%= grua.availability %></p>
         <a href="<%= grua.link.to_s%>" style="font-size: 16px">Ficha tecnica</a>
       </div>
     </div>
