--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -12,8 +12,7 @@
         <div class="card-trip-infos">
           <a><%= link_to " #{tractor.modelo}"  , tractor_path(tractor) %></a>
           <p> Marca: <%= tractor.marca %></h2>
-          <p> disponibilidad: <%= tractor.disponible %></h6>
-          <p></p>
+          <p class="availability" style="font-size: 14px;"><%= tractor.availability %></p>
           <a href="<%= tractor.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
         </div>
       </div>
