--- a/app/views/ventos/shared/_card.html.erb
+++ b/app/views/ventos/shared/_card.html.erb
@@ -6,6 +6,7 @@
         <a><%= link_to " #{vento.modelo}", vento_path(vento) %></a>
         <p> Marca: <%= vento.marca %></h2>
         <p> disponibilidad: <%= vento.disponible %></h6>
+        <p class="availability" style="font-size: 14px;"><%= vento.availability %></p>
         <p></p>
         <a href="<%= vento.link.to_s%>" style="font-size: 16px">Ficha tecnica</a>
       </div>
