--- a/app/views/gruas/edit.html.erb
+++ b/app/views/gruas/edit.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <div class="btn btn-flat">
-        <%= f.button :submit, "Crear grua" %>
+        <%= f.button :submit, "Actualizar grua" %>
       </div>
     <% end %>
   </div>
