--- a/app/views/ventos/shared/_card.html.erb
+++ b/app/views/ventos/shared/_card.html.erb
@@ -6,7 +6,7 @@
         <a><%= link_to " #{vento.modelo}", vento_path(vento) %></a>
         <p> Marca: <%= vento.marca %></h2>
         <p></p>
-        <a href="<%= vento.link.to_s%>" style="font-size: 16px">Ficha tecnica</a>
+        <a href="<%= vento&.link&.to_s%>" style="font-size: 16px">Ficha tecnica</a>
       </div>
     </div>
   <% end %>
