add nil and navbar link

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,10 @@
 <header class="main-header style-two">
     <div class="header-upper">
         <div class="large-container">
-            <div class="outer-box clearfix">
+          <div class="outer-box clearfix">
+            <%= link_to root_path do %>
+              <%= image_tag "https://res.cloudinary.com/dd3nxxiaw/image/upload/v1673610580/logo_skl_bagtzk.jpg", class: "logo-skl ms-5" %>
+            <% end %>
                 <div class="menu-area pull-right clearfix">
                     <!--Mobile Navigation Toggler-->
                     <div class="mobile-nav-toggler">
